# NWU.ICU

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  backSql.sh  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
common/: admin.py  apps.py  constants.py  context_processors.py  middleware.py  models.py  serializers.py  signals.py  tests.py  utils.py  views.py
common/file/: models.py  serializers.py  signals.py  view.py
common/migrations/: 0001_initial.py  0002_webpushsubscription.py  0003_auto_20210813_1828.py  0004_about_uploadedfile_bulletin.py  0005_message.py  0006_alter_message_type.py  0007_chat_remove_message_common_mess_sender__bc7b10_idx_and_more.py  0008_alter_message_chat_item.py  0009_remove_chat_common_chat_sender__a87097_idx_and_more.py  0010_remove_chat_unique_chat_pair_and_more.py  0011_remove_message_type_chat_type.py  0012_rename_type_chat_classify.py  0013_rename_message_chatmessage_chat_last_message_content_and_more.py  0014_remove_chatlike_dislike_latest_user_and_more.py  0015_remove_chat_unique_chat_pair_and_more.py  0016_chat_unread_count.py  0017_chatmessage_common_chat_chat_it_5599fc_idx_and_more.py  0018_uploadedfile_file_hash.py  0019_rename_raw_post_chatlike_raw_post_id_and_more.py  0020_alter_chatlike_raw_post_course_and_more.py  0021_rename_raw_post_chatreply_raw_post_id_and_more.py  0022_rename_unread_count_chat_receiver_unread_count_and_more.py  0023_chatmessage_created_by.py  0024_chatlike_read_and_more.py  0027_uploadedfile_file_name.py  (+8 more)
core/: admin.py  models.py  views.py
course_assessment/: admin.py  apps.py  asgi.py  development.py.sample  log.py  managers.py  models.py  permissions.py  production.py.sample  review_serializer.py  serializer.py  settings.py  signals.py  tests.py  urls.py  views.py  wsgi.py
report/: admin.py  models.py  trigger_report.sh  views.py
settings/: __init__.py  asgi.py  development.py.sample  log.py  production.py.sample  settings.py  urls.py  wsgi.py
static/: misc.js
test_project/: common.py
user/: admin.py  form.py  forms.py  models.py  serializers.py  tests.py  views.py
utils/: constants.py  custom_pagination.py  models.py  throttle.py  utils.py
(+123 files in other folders)
