[tool.poetry]
name = "nwu.icu"
version = "1.2"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
requests = "^2.27.1"
pycryptodome = "^3.14.1"
beautifulsoup4 = "^4.10.0"
pyTelegramBotAPI = "^4.4.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-silk = "^5.0.0"
pywebpush = "^1.14.0"
tqdm = "^4.64.0"
coverage = "^7.5.4"
django-simple-captcha = "^0.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest-django = "^4.5.2"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.development"
python_files = "tests.py"
